--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -408,153 +408,31 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:18<00:00,  1.89s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 2/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.70s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 3/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.77s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 4/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.75s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 5/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.71s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 6/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.76s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 7/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:16<00:00,  1.69s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 8/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:18<00:00,  1.82s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 9/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.74s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Computing KFold 10/10...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:17<00:00,  1.80s/it]\n"
+      " 70%|███████   | 7/10 [04:28<01:59, 39.67s/it]"
      ]
     }
    ],
    "source": [
     "params = {}\n",
-    "params['LogisticRegression'] = {'C': [0.05, 0.07, 0.08, 0.09]}\n",
+    "lam = np.logspace(-6, 2, 100)\n",
+    "C = 1/ lam\n",
+    "# C = [200000000, 10000000, 0.1519911082952933, 0.2848035868435805 ]\n",
+    "params['LogisticRegression'] = {'C': C}\n",
     "params['DummyClassifier'] = [None]\n",
-    "params['MLPClassifier'] = {'hidden_layer_sizes': [(8,), (16,), (20,)]}\n",
-    "models = [LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=1000, random_state= random_state),\n",
+    "params['MLPClassifier'] = {'hidden_layer_sizes': [(8, ), (16, ), (20, )]}\n",
+    "models = [LogisticRegression(multi_class='multinomial', solver='saga', max_iter=1000000, random_state= random_state, tol = 0.003, n_jobs = -1),\n",
     "        DummyClassifier(strategy='most_frequent', random_state=random_state),\n",
     "        MLPClassifier(solver='adam', activation='logistic', alpha=1e-4, random_state=random_state, max_iter=1000, \n",
     "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
     "k1 = 10\n",
     "k2 = 10\n",
-    "Table, test_set_outer = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params, rs = random_state)"
+    "Table, test_set_outer = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params, rs = random_state)\n",
+    "Table.to_csv('Results/Test2_saga.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -608,8 +486,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.09</td>\n",
-       "      <td>0.042484</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>0.040033</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.788399</td>\n",
        "      <td>(16,)</td>\n",
@@ -617,8 +495,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.036735</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>0.034286</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -626,8 +504,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.036735</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>0.034286</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -635,8 +513,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.036735</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>0.034286</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -644,8 +522,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.08</td>\n",
-       "      <td>0.036735</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>0.034286</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -653,8 +531,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.037551</td>\n",
+       "      <td>0.151991</td>\n",
+       "      <td>0.035918</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
        "      <td>(8,)</td>\n",
@@ -662,8 +540,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.037551</td>\n",
+       "      <td>0.151991</td>\n",
+       "      <td>0.035918</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
        "      <td>(8,)</td>\n",
@@ -671,8 +549,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.034286</td>\n",
+       "      <td>0.151991</td>\n",
+       "      <td>0.033469</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
        "      <td>(8,)</td>\n",
@@ -680,8 +558,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.034286</td>\n",
+       "      <td>0.151991</td>\n",
+       "      <td>0.033469</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
        "      <td>(8,)</td>\n",
@@ -689,8 +567,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.044082</td>\n",
+       "      <td>0.151991</td>\n",
+       "      <td>0.042449</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.788571</td>\n",
        "      <td>(8,)</td>\n",
@@ -704,16 +582,16 @@
        "      LogisticRegression           DummyClassifier           MLPClassifier  \\\n",
        "            Param. Value     Error    Param. Value     Error  Param. Value   \n",
        "KFold                                                                        \n",
-       "1                   0.09  0.042484             NaN  0.788399         (16,)   \n",
-       "2                   0.08  0.036735             NaN   0.78449          (8,)   \n",
-       "3                   0.08  0.036735             NaN   0.78449          (8,)   \n",
-       "4                   0.08  0.036735             NaN   0.78449          (8,)   \n",
-       "5                   0.08  0.036735             NaN   0.78449          (8,)   \n",
-       "6                   0.07  0.037551             NaN  0.790204          (8,)   \n",
-       "7                   0.07  0.037551             NaN  0.790204          (8,)   \n",
-       "8                   0.07  0.034286             NaN  0.790204          (8,)   \n",
-       "9                   0.07  0.034286             NaN  0.790204          (8,)   \n",
-       "10                  0.07  0.044082             NaN  0.788571          (8,)   \n",
+       "1              200000000  0.040033             NaN  0.788399         (16,)   \n",
+       "2              200000000  0.034286             NaN   0.78449          (8,)   \n",
+       "3              200000000  0.034286             NaN   0.78449          (8,)   \n",
+       "4              200000000  0.034286             NaN   0.78449          (8,)   \n",
+       "5              200000000  0.034286             NaN   0.78449          (8,)   \n",
+       "6               0.151991  0.035918             NaN  0.790204          (8,)   \n",
+       "7               0.151991  0.035918             NaN  0.790204          (8,)   \n",
+       "8               0.151991  0.033469             NaN  0.790204          (8,)   \n",
+       "9               0.151991  0.033469             NaN  0.790204          (8,)   \n",
+       "10              0.151991  0.042449             NaN  0.788571          (8,)   \n",
        "\n",
        "                 \n",
        "          Error  \n",
@@ -730,7 +608,7 @@
        "10     0.044082  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,16 +818,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import beta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "def calcs(mat: np.array):\n",
     "    \"\"\"Calculate f y g from a McNemar Matrix\n",
-    "\n",
     "    Args:\n",
     "        matrix (np.array): McNemar matrix from one K-fold\n",
-    "\n",
     "    Returns:\n",
     "        _type_: f and g\n",
     "    \"\"\"\n",
@@ -957,7 +842,7 @@
     "    n12 = mat[1]\n",
     "    n21 = mat[2]\n",
     "    E_th = (n12 - n21)/n \n",
-    "    Q = (n**2 (n+1)*(E_th +1)*(1-E_th)) / (n*(n12 +n21) - (n12 - n21)**2)\n",
+    "    Q = (n**2 * (n+1) * (E_th +1) * (1-E_th)) / (n * (n12 + n21) - (n12 - n21)**2)\n",
     "    f = (Q-1)*(E_th+1)/2\n",
     "    g = (Q-1)*(1-E_th)/2\n",
     "    return f, g"
@@ -965,50 +850,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def interval(f,g):\n",
-    "    beta.ppf\n",
+    "def interval(mat: np.array, alpha: float):\n",
+    "    \"\"\"McNemar confidence interval\n",
+    "\n",
+    "    Args:\n",
+    "        alpha (float): The desired confidence (should be 0.05)  \n",
+    "        f (_type_): output of calcs\n",
+    "        g (_type_): output of calcs \n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: left and right bounds from the interval\n",
+    "    \"\"\"\n",
+    "    f,g = calcs(mat)\n",
+    "    theta_L = 2*beta.ppf(alpha, f, g) - 1\n",
+    "    theta_R = 2*beta.ppf(1 - alpha/2, f, g) - 1\n",
     "    return theta_L, theta_R"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[34., 92.,  2.,  9.],\n",
-       "       [34., 93.,  1.,  8.],\n",
-       "       [32., 92.,  3.,  9.],\n",
-       "       [35., 91.,  0., 10.],\n",
-       "       [34., 98.,  1.,  3.],\n",
-       "       [34., 84.,  1., 17.],\n",
-       "       [31., 93.,  5.,  7.],\n",
-       "       [33., 96.,  3.,  4.],\n",
-       "       [31., 93.,  5.,  7.],\n",
-       "       [32., 94.,  4.,  6.]])"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n",
+      "[0.58, 0.74]\n",
+      "[0.61, 0.75]\n",
+      "[0.58, 0.74]\n",
+      "[0.6, 0.74]\n",
+      "[0.64, 0.79]\n",
+      "[0.54, 0.69]\n",
+      "[0.57, 0.73]\n",
+      "[0.61, 0.76]\n",
+      "[0.57, 0.73]\n",
+      "[0.58, 0.75]\n",
+      "(0, 2)\n",
+      "[-0.01, 0.06]\n",
+      "[-0.0, 0.07]\n",
+      "[-0.03, 0.02]\n",
+      "[-0.02, 0.03]\n",
+      "[0.01, 0.06]\n",
+      "[-0.01, 0.06]\n",
+      "[-0.02, 0.02]\n",
+      "[-0.02, 0.02]\n",
+      "[-0.06, 0.01]\n",
+      "[-0.01, 0.03]\n",
+      "(1, 2)\n",
+      "[-0.71, -0.55]\n",
+      "[-0.73, -0.57]\n",
+      "[-0.73, -0.57]\n",
+      "[-0.73, -0.58]\n",
+      "[-0.77, -0.62]\n",
+      "[-0.67, -0.51]\n",
+      "[-0.72, -0.55]\n",
+      "[-0.75, -0.59]\n",
+      "[-0.73, -0.57]\n",
+      "[-0.73, -0.56]\n"
+     ]
     }
    ],
    "source": [
-    "m[combs[0]]"
+    "for i in m:\n",
+    "    print(i)\n",
+    "    for mat in m[i]:\n",
+    "        theta_L, theta_R = interval(mat, 0.05)\n",
+    "        print(f'[{np.round(theta_L, 2)}, {np.round(theta_R, 2)}]')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
