--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -408,7 +408,133 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 70%|███████   | 7/10 [04:28<01:59, 39.67s/it]"
+      "100%|██████████| 10/10 [06:47<00:00, 40.74s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 2/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [07:13<00:00, 43.32s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 3/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [11:02<00:00, 66.29s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 4/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [09:52<00:00, 59.22s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 5/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [10:22<00:00, 62.20s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 6/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [06:14<00:00, 37.45s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 7/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [15:30<00:00, 93.02s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 8/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [12:31<00:00, 75.16s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 9/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [10:49<00:00, 64.91s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Computing KFold 10/10...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 10/10 [11:46<00:00, 70.62s/it]\n"
      ]
     }
    ],
@@ -432,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +612,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>200000000</td>\n",
+       "      <td>1000000.0</td>\n",
        "      <td>0.040033</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.788399</td>\n",
@@ -495,8 +621,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>200000000</td>\n",
-       "      <td>0.034286</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.035102</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -504,8 +630,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>200000000</td>\n",
-       "      <td>0.034286</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.035102</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -513,8 +639,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>200000000</td>\n",
-       "      <td>0.034286</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.035102</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -522,8 +648,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>200000000</td>\n",
-       "      <td>0.034286</td>\n",
+       "      <td>1000000.0</td>\n",
+       "      <td>0.035102</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
        "      <td>(8,)</td>\n",
@@ -531,8 +657,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>0.151991</td>\n",
-       "      <td>0.035918</td>\n",
+       "      <td>0.722081</td>\n",
+       "      <td>0.036735</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
        "      <td>(8,)</td>\n",
@@ -540,8 +666,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>0.151991</td>\n",
-       "      <td>0.035918</td>\n",
+       "      <td>0.722081</td>\n",
+       "      <td>0.036735</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
        "      <td>(8,)</td>\n",
@@ -549,7 +675,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>0.151991</td>\n",
+       "      <td>0.236449</td>\n",
        "      <td>0.033469</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
@@ -558,7 +684,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>0.151991</td>\n",
+       "      <td>0.236449</td>\n",
        "      <td>0.033469</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.790204</td>\n",
@@ -567,8 +693,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
-       "      <td>0.151991</td>\n",
-       "      <td>0.042449</td>\n",
+       "      <td>0.284804</td>\n",
+       "      <td>0.041633</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.788571</td>\n",
        "      <td>(8,)</td>\n",
@@ -582,16 +708,16 @@
        "      LogisticRegression           DummyClassifier           MLPClassifier  \\\n",
        "            Param. Value     Error    Param. Value     Error  Param. Value   \n",
        "KFold                                                                        \n",
-       "1              200000000  0.040033             NaN  0.788399         (16,)   \n",
-       "2              200000000  0.034286             NaN   0.78449          (8,)   \n",
-       "3              200000000  0.034286             NaN   0.78449          (8,)   \n",
-       "4              200000000  0.034286             NaN   0.78449          (8,)   \n",
-       "5              200000000  0.034286             NaN   0.78449          (8,)   \n",
-       "6               0.151991  0.035918             NaN  0.790204          (8,)   \n",
-       "7               0.151991  0.035918             NaN  0.790204          (8,)   \n",
-       "8               0.151991  0.033469             NaN  0.790204          (8,)   \n",
-       "9               0.151991  0.033469             NaN  0.790204          (8,)   \n",
-       "10              0.151991  0.042449             NaN  0.788571          (8,)   \n",
+       "1              1000000.0  0.040033             NaN  0.788399         (16,)   \n",
+       "2              1000000.0  0.035102             NaN   0.78449          (8,)   \n",
+       "3              1000000.0  0.035102             NaN   0.78449          (8,)   \n",
+       "4              1000000.0  0.035102             NaN   0.78449          (8,)   \n",
+       "5              1000000.0  0.035102             NaN   0.78449          (8,)   \n",
+       "6               0.722081  0.036735             NaN  0.790204          (8,)   \n",
+       "7               0.722081  0.036735             NaN  0.790204          (8,)   \n",
+       "8               0.236449  0.033469             NaN  0.790204          (8,)   \n",
+       "9               0.236449  0.033469             NaN  0.790204          (8,)   \n",
+       "10              0.284804  0.041633             NaN  0.788571          (8,)   \n",
        "\n",
        "                 \n",
        "          Error  \n",
@@ -608,7 +734,7 @@
        "10     0.044082  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +764,7 @@
        "(1361,)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,17 +789,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
     "\n",
     "def McNemar(models: list, X: np.array, y: np.array, k1: int, rs: int):\n",
+    "    \"\"\"Computes the McNemar matrix for all the models in the list \n",
+    "\n",
+    "    Args:\n",
+    "        models (list): list of models\n",
+    "        X (np.array): Features\n",
+    "        y (np.array): Classes\n",
+    "        k1 (int): Number of folds\n",
+    "        rs (int): Random state\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: Matrix as a dictionary\n",
+    "    \"\"\"\n",
     "    kf1 = StratifiedKFold(k1, shuffle = True, random_state=rs)\n",
     "    k = 0\n",
     "    # setting up all the possible combinations between the different models\n",
     "    matrix = dict.fromkeys(combinations(range(len(models)), 2))\n",
+    "    matrix_tot = dict.fromkeys(combinations(range(len(models)), 2))\n",
     "    for train_idx, test_idx in kf1.split(X, y):\n",
     "        test_size = test_idx.shape[0]\n",
     "        yABC = np.empty(shape=(len(models), test_size))\n",
@@ -689,13 +828,14 @@
     "            n21 = np.sum(yABC[j[1],:]*(1-yABC[j[0],:]))\n",
     "            n22 = np.sum((1-yABC[0,:])*(1-yABC[1,:]))\n",
     "            matrix[j][k] = np.array([n11, n12, n21, n22])\n",
+    "            matrix_tot[j] = matrix[j].sum(axis = 0)\n",
     "        k+=1\n",
-    "    return matrix"
+    "    return matrix, matrix_tot"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +845,70 @@
     "        MLPClassifier(solver='adam', activation='logistic', alpha=1e-4, random_state=random_state, max_iter=1000, hidden_layer_sizes=(8, ),\n",
     "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
     "k1 = 10\n",
-    "m = McNemar(models, X_stdz[test_set_outer, :], y_[test_set_outer], k1, rs = random_state)"
+    "mfull, m_tot = McNemar(models, X_stdz[test_set_outer, :], y_[test_set_outer], k1, rs = random_state)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           (0, 1)\n",
+      "       [34. 92.  2.  9.]\n",
+      "       [34. 93.  1.  8.]\n",
+      "       [32. 92.  3.  9.]\n",
+      "       [35. 91.  0. 10.]\n",
+      "       [34. 98.  1.  3.]\n",
+      "       [34. 84.  1. 17.]\n",
+      "       [31. 93.  5.  7.]\n",
+      "       [33. 96.  3.  4.]\n",
+      "       [31. 93.  5.  7.]\n",
+      "       [32. 94.  4.  6.]\n",
+      "\n",
+      "Total: [330. 926.  25.  80.]\n",
+      "----------------------------------\n",
+      "           (0, 2)\n",
+      "       [121.   5.   2.   9.]\n",
+      "       [121.   6.   2.   8.]\n",
+      "       [123.   1.   2.   9.]\n",
+      "       [124.   2.   2.  10.]\n",
+      "       [128.   4.   0.   3.]\n",
+      "       [113.   5.   2.  17.]\n",
+      "       [123.   1.   1.   7.]\n",
+      "       [128.   1.   1.   4.]\n",
+      "       [123.   1.   5.   7.]\n",
+      "       [124.   2.   1.   6.]\n",
+      "\n",
+      "Total: [1228.   28.   18.   80.]\n",
+      "----------------------------------\n",
+      "           (1, 2)\n",
+      "       [32.  4. 91.  9.]\n",
+      "       [33.  2. 90.  8.]\n",
+      "       [32.  3. 93.  9.]\n",
+      "       [34.  1. 92. 10.]\n",
+      "       [34.  1. 94.  3.]\n",
+      "       [33.  2. 82. 17.]\n",
+      "       [31.  5. 93.  7.]\n",
+      "       [32.  4. 97.  4.]\n",
+      "       [32.  4. 96.  7.]\n",
+      "       [31.  5. 94.  6.]\n",
+      "\n",
+      "Total: [324.  31. 922.  80.]\n",
+      "----------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "for mat in mfull:\n",
+    "    print('          ',mat)\n",
+    "    for ma in mfull[mat]:\n",
+    "        print('      ', ma)\n",
+    "    print('\\nTotal:',m_tot[mat])\n",
+    "    print('----------------------------------')"
    ]
   },
   {
@@ -756,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,9 +968,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "invalid index to scalar variable.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Diego\\Documents\\DTU\\IntroML\\Project1_ML\\Project2.ipynb Cell 44\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Diego/Documents/DTU/IntroML/Project1_ML/Project2.ipynb#X56sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m pv_dict \u001b[39m=\u001b[39m \u001b[39mdict\u001b[39m\u001b[39m.\u001b[39mfromkeys(combs)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Diego/Documents/DTU/IntroML/Project1_ML/Project2.ipynb#X56sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfor\u001b[39;00m j \u001b[39min\u001b[39;00m combs:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Diego/Documents/DTU/IntroML/Project1_ML/Project2.ipynb#X56sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     vals \u001b[39m=\u001b[39m m[j][:, \u001b[39m1\u001b[39m:\u001b[39m3\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Diego/Documents/DTU/IntroML/Project1_ML/Project2.ipynb#X56sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m     pv_dict[j] \u001b[39m=\u001b[39m [binom\u001b[39m.\u001b[39mcdf(\u001b[39mmin\u001b[39m(vals[i]), n \u001b[39m=\u001b[39m \u001b[39msum\u001b[39m(vals[i]), p \u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m) \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39mlen\u001b[39m(vals))]\n",
+      "\u001b[1;31mIndexError\u001b[0m: invalid index to scalar variable."
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import binom\n",
     "pv_dict = dict.fromkeys(combs)\n",
@@ -778,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,26 +1002,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1)\n",
+      "$2.25·10^{-25}$\n",
+      "$4.80·10^{-27}$\n",
+      "$3.61·10^{-24}$\n",
+      "$4.04·10^{-28}$\n",
+      "$1.58·10^{-28}$\n",
+      "$2.22·10^{-24}$\n",
+      "$2.26·10^{-22}$\n",
+      "$2.55·10^{-25}$\n",
+      "$2.26·10^{-22}$\n",
+      "$1.19·10^{-23}$\n",
+      "(0, 2)\n",
+      "$2.27·10^{-01}$\n",
+      "$1.45·10^{-01}$\n",
+      "$5.00·10^{-01}$\n",
+      "$6.88·10^{-01}$\n",
+      "$6.25·10^{-02}$\n",
+      "$2.27·10^{-01}$\n",
+      "$7.50·10^{-01}$\n",
+      "$7.50·10^{-01}$\n",
+      "$1.09·10^{-01}$\n",
+      "$5.00·10^{-01}$\n",
+      "(1, 2)\n",
+      "$8.40·10^{-23}$\n",
+      "$8.64·10^{-25}$\n",
+      "$1.86·10^{-24}$\n",
+      "$9.49·10^{-27}$\n",
+      "$2.42·10^{-27}$\n",
+      "$1.85·10^{-22}$\n",
+      "$2.26·10^{-22}$\n",
+      "$1.68·10^{-24}$\n",
+      "$3.22·10^{-24}$\n",
+      "$1.19·10^{-22}$\n"
+     ]
+    }
+   ],
    "source": [
     "i = 0\n",
     "for n in pv_dict.values():\n",
     "    print(f'{combs[i]}')\n",
     "    for j, k in enumerate(n):\n",
     "        McNemar_pv[combs[i]][j] = \"{:.3e}\".format(k)\n",
-    "        print(\"{:.3e}\".format(k))\n",
+    "        text = str(\"${:.2e}\".format(k))\n",
+    "        text = text + '}$'\n",
+    "        text = text.replace(\"e\", \"·10^{\")\n",
+    "        print(text)\n",
     "    i+=1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
-    "McNemar_pv.to_csv('McNemar_pv.csv')"
+    "McNemar_pv.to_csv('Results/McNemar_pv_best.csv')"
    ]
   },
   {
@@ -818,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -827,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -850,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
