--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -203,21 +203,12 @@
      "output_type": "stream",
      "text": [
       "device:  cpu\n",
-      "(13611, 15)\n",
-      "169.77568\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [41], line 54\u001b[0m\n\u001b[1;32m     52\u001b[0m     optim\u001b[39m.\u001b[39mzero_grad()\n\u001b[1;32m     53\u001b[0m     loss\u001b[39m.\u001b[39mbackward()\n\u001b[0;32m---> 54\u001b[0m     optim\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     55\u001b[0m \u001b[39mif\u001b[39;00m i \u001b[39m%\u001b[39m \u001b[39m100\u001b[39m \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m     56\u001b[0m     \u001b[39mprint\u001b[39m(loss\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mdetach()\u001b[39m.\u001b[39mnumpy())\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/pytorch_2/lib/python3.8/site-packages/torch/optim/optimizer.py:112\u001b[0m, in \u001b[0;36mOptimizer._hook_for_profile.<locals>.profile_hook_step.<locals>.wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    110\u001b[0m obj, \u001b[39m*\u001b[39m_ \u001b[39m=\u001b[39m args\n\u001b[1;32m    111\u001b[0m profile_name \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mOptimizer.step#\u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m.step\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(obj\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m)\n\u001b[0;32m--> 112\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mautograd\u001b[39m.\u001b[39mprofiler\u001b[39m.\u001b[39mrecord_function(profile_name):\n\u001b[1;32m    113\u001b[0m     \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[0;32m~/opt/anaconda3/envs/pytorch_2/lib/python3.8/site-packages/torch/autograd/profiler.py:446\u001b[0m, in \u001b[0;36mrecord_function.__enter__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    445\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__enter__\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[0;32m--> 446\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mhandle \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39;49mops\u001b[39m.\u001b[39;49mprofiler\u001b[39m.\u001b[39;49m_record_function_enter(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mname, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39margs)\n\u001b[1;32m    447\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "(13611, 16)\n",
+      "61267.746\n",
+      "147.33556\n",
+      "275.43173\n",
+      "355.75156\n",
+      "228.30981\n"
      ]
     }
    ],
@@ -231,11 +222,28 @@
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else 'cpu'\n",
     "print(\"device: \", device)\n",
+    "label_feature = 'Perimeter'\n",
     "\n",
-    "x = df.drop(columns='Class').drop(columns='MajorAxisLength').values\n",
+    "x = df.drop(columns='Class').drop(columns=label_feature).values\n",
+    "Class = df['Class']\n",
+    "class_label = []\n",
+    "dictionary = {\n",
+    "    'SEKER': 0,\n",
+    "    'BARBUNYA': 1,\n",
+    "    'BOMBAY': 2, \n",
+    "    'CALI': 3,\n",
+    "    'HOROZ': 4,\n",
+    "    'SIRA': 5,\n",
+    "    'DERMASON': 6\n",
+    "}\n",
+    "for i in Class:\n",
+    "    class_label.append(dictionary[i])\n",
+    "\n",
+    "class_label = np.array(class_label)\n",
     "x = np.array(x)\n",
+    "x = np.insert(x, x.shape[1], class_label, axis=1)\n",
     "print(x.shape)\n",
-    "y = df['roundness']\n",
+    "y = df[label_feature]\n",
     "y = np.array(y)\n",
     "y = y.reshape((-1,1))\n",
     "\n",
@@ -245,14 +253,15 @@
     "        self.Net = nn.Sequential(\n",
     "            nn.Linear(num_input, num_hidden),\n",
     "            nn.ReLU(),\n",
+    "            nn.Linear(num_hidden, num_hidden),\n",
+    "            nn.ReLU(),\n",
     "            nn.Linear(num_hidden, num_output),\n",
-    "            # nn.Sigmoid()\n",
     "        )\n",
     "        \n",
     "    def forward(self, input):\n",
     "        return self.Net(input)\n",
     "\n",
-    "model = ANN(x.shape[1], y.shape[1], 32).to(device)\n",
+    "model = ANN(x.shape[1], y.shape[1], 64).to(device)\n",
     "\n",
     "batch_size = 64\n",
     "x = x.astype(np.float32)\n",
@@ -282,14 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.84749925] tensor([0.7396])\n"
+      "[0.] tensor([556.1060])\n"
      ]
     }
    ],
